--- a/silksong.html
+++ b/silksong.html
@@ -32,15 +32,15 @@
     <br />
     <br />
     <br />
-    <bold id="counter" class="center">Text</bold>
+    <bold id="counter" class="center">I have no fucking idea when silksong will be out.</bold>
     <script>
-      const date1 = new Date();
+      /*const date1 = new Date();
       const date2 = new Date("06/12/2023");
       const diffT = date2.getTime() - date1.getTime();
       const days = diffT / (1000 * 3600 * 24);
       const chance = (1 / days) * 100;
       let counter = document.getElementById("counter");
-      counter.innerHTML = `It is ${chance.toFixed(5)}% likely that silksong will release today.`;
+      counter.innerHTML = `It is ${chance.toFixed(5)}% likely that silksong will release today.`;*/
     </script>
   </body>
 </html>
