--- a/silksong.html
+++ b/silksong.html
@@ -32,7 +32,7 @@
     <br />
     <br />
     <br />
-    <bold id="counter" class="center">I have no fucking idea when silksong will be out.</bold>
+    <bold id="counter" class="center">I have no fucking clue as to how ikely it is for silksong to come out.</bold>
     <script>
       /*const date1 = new Date();
       const date2 = new Date("06/12/2023");
