--- a/silksong.html
+++ b/silksong.html
@@ -34,13 +34,13 @@
     <br />
     <bold id="counter" class="center">I have no fucking clue as to how ikely it is for silksong to come out.</bold>
     <script>
-      /*const date1 = new Date();
+      const date1 = new Date();
       const date2 = new Date("06/12/2023");
       const diffT = date2.getTime() - date1.getTime();
       const days = diffT / (1000 * 3600 * 24);
       const chance = (1 / days) * 100;
       let counter = document.getElementById("counter");
-      counter.innerHTML = `It is ${chance.toFixed(5)}% likely that silksong will release today.`;*/
+      counter.innerHTML = `It is ${chance.toFixed(5)}% likely that silksong will release today.`;
     </script>
   </body>
 </html>
