--- a/silksong.html
+++ b/silksong.html
@@ -32,15 +32,21 @@
     <br />
     <br />
     <br />
-    <bold id="counter" class="center">I have no fucking clue as to how ikely it is for silksong to come out.</bold>
+    <bold id="counter" class="center">lorem ipsum</bold>
     <script>
-      const date1 = new Date();
       const date2 = new Date("06/12/2023");
-      const diffT = date2.getTime() - date1.getTime();
-      const days = diffT / (1000 * 3600 * 24);
-      const chance = (1 / days) * 100;
+      const a = 1000 * 3600 * 24
       let counter = document.getElementById("counter");
-      counter.innerHTML = `It is ${chance.toFixed(5)}% likely that silksong will release today.`;
+      let lastChance = 0;
+      while (true) {
+      const date1 = new Date();
+      const diffT = date2.getTime() - date1.getTime();
+      const days = diffT / a
+      const chance = (1 / days) * 100;
+      if (chance.toFixed(5) != lastChance)
+        counter.innerHTML = `It is ${chance.toFixed(5)}% likely that silksong will release today.`;
+      lastChance = chance.toFixed(5);
+      }
     </script>
   </body>
 </html>
