--- a/silksong.html
+++ b/silksong.html
@@ -153,6 +153,11 @@
           precision = 5;
           break
         case "this month":
+          const month = date1.getMonth();
+          const days = month == 2 ? 28 : (!(month % 2) ? 30 : 31)
+          unit = Math.ceil(diffT / (1000 * 3600 * 24 * days - date1.getDate()))
+          chance = (1 / unit) * 100;
+          precision = 5;
           break
         case "this year":
           break
