--- a/silksong.html
+++ b/silksong.html
@@ -155,14 +155,14 @@
         case "this month":
           const month = date1.getMonth();
           const days = month == 2 ? 28 : (!(month % 2) && month != 8 ? 30 : 31)
-          unit = Math.ceil(diffT / (1000 * 3600 * 24 * days - date1.getDate()))
+          unit = Math.ceil(diffT / (1000 * 3600 * 24 * Math.ceil((new Date(`${month}/${days}/${date1.getFullYear()}`).getTime() - date1.getTime()) / (1000 * 3600 * 24))))
           chance = (1 / unit) * 100;
           precision = 3;
           break
         case "this year":
           const year = date1.getFullYear();
           if (year == 2022) {
-            unit = Math.ceil((new Date("12/31/2022").getTime() - date1.getTime()) / (1000 * 3600 * 24))
+            unit = Math.ceil(diffT / (1000 * 3600 * 24 * Math.ceil((new Date("12/31/2022").getTime() - date1.getTime()) / (1000 * 3600 * 24))));
             chance = (1 / unit) * 100;
             precision = 2;
           } else {
@@ -173,6 +173,10 @@
       if (chance >= 100) {
         precision = 0;
         chance = 100
+      }
+      if (chance <= 0) {
+        precision = 0;
+        chance = 0
       }
       let counter = document.getElementById("counter");
       let text = `It is ${chance.toFixed(precision)}% likely that Silksong will release `
