--- a/silksong.html
+++ b/silksong.html
@@ -5,105 +5,7 @@
 </head>
 
 <body style="text-align: center">
-  <style>
-    label {
-      padding: 4;
-      color: hsl(259, 44%, 8%);
-      border-width: 4;
-      border-style: none;
-      border-radius: 10px;
-      font-size: 28;
-      font-weight: bolder;
-      font-family: Verdana;
-      background-color: whitesmoke;
-    }
-
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-
-    input[type=number] {
-      -moz-appearance: textfield;
-    }
-
-    .dropbtn {
-      font-size: 25;
-    }
-
-    .btn {
-      font-size: 30;
-    }
-
-    button {
-      padding: 8;
-      background-color: hsl(212, 8%, 54%);
-      color: hsl(0, 0%, 100%);
-      border-color: hsl(0, 0%, 100%);
-      border-width: 4;
-      border-style: solid;
-      border-radius: 10px;
-      font-weight: bolder;
-      font-family: Verdana;
-    }
-
-    button:hover {
-      padding: 8;
-      border-color: hsl(348, 80%, 33%);
-      background-color: hsl(348, 83%, 47%);
-      color: hsl(259, 44%, 8%);
-      border-width: 4;
-      border-style: solid;
-      border-radius: 10px;
-      font-weight: bolder;
-      font-family: Verdana;
-    }
-
-    body {
-      background-size: 140%;
-      background-position-x: 50%;
-      background-position-y: 100%;
-      background-color: hsl(259, 44%, 8%);
-    }
-
-    .center {
-      white-space: nowrap;
-      display: inline-block;
-      border-color: goldenrod;
-      border-width: 4px;
-      border-style: none;
-      border-radius: 10px;
-      font-weight: bold;
-      font-family: Verdana;
-      font-size: 25px;
-      color: aliceblue;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
-      padding: 8px;
-      line-height: 50px;
-    }
-
-    .dropdown {
-      position: relative;
-      display: inline-block;
-      line-height: 120px;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      border-width: 0;
-      border-style: none;
-      border-radius: 4px;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
-      z-index: 1;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
   <br>
   <bold id="counter" class="center">Text</bold>
   <br>
