--- a/silksong.html
+++ b/silksong.html
@@ -103,10 +103,7 @@
       document.getElementsByClassName("dropbtn").item(0).innerText = `${window.chanceType}`
     }
   </script>
-  <footer>Made by
-    <a href="https://twitter.com/PharloomMathGuy">@PharloomMathGuy</a>
-    on Twitter
-  </footer>
+  <footer>Made by <a href="https://twitter.com/PharloomMathGuy">@PharloomMathGuy</a> on Twitter </footer>
 </body>
 
 </html>
