Refactor to fix gh pages (maybe?)

--- a/silksong.html
+++ b/silksong.html
@@ -103,7 +103,7 @@
       document.getElementsByClassName("dropbtn").item(0).innerText = `${window.chanceType}`
     }
   </script>
-  <footer>Made by <a href="https://twitter.com/PharloomMathGuy">@PharloomMathGuy</a> on Twitter </footer>
+  <footer class="foot">Made by <a href="https://twitter.com/PharloomMathGuy">@PharloomMathGuy</a> on Twitter </footer>
 </body>
 
 </html>
