--- a/silksong.html
+++ b/silksong.html
@@ -12,78 +12,81 @@
   <br>
   <button class="btn" id="refresh" onclick="refresh()">Recalculate</button>
   <script>
-
     window.chanceType = "today";
     const right_now = () => {
       window.chanceType = "right now";
       refresh();
-    }
+    };
     const today = () => {
       window.chanceType = "today";
       refresh();
-    }
+    };
     const this_month = () => {
       window.chanceType = "this month";
       refresh();
-    }
+    };
     const this_year = () => {
       window.chanceType = "this year";
       refresh();
-    }
+    };
     const num = Math.floor(Math.random() * 9) + 1;
     document.body.background = `images/${num}.jpg`;
     const refresh = () => {
-      document.getElementById("refresh").innerText = "Recalculating..."
-      setTimeout(() => document.getElementById("refresh").innerText = "Recalculate", 250)
+      document.getElementById("refresh").innerText = "Recalculating...";
+      setTimeout(
+        () => (document.getElementById("refresh").innerText = "Recalculate"),
+        250
+      );
       const date1 = new Date();
       const date2 = new Date("06/12/2023");
-      const a = 1000 * 3600 * 24
       let lastChance = 0;
       const diffT = date2.getTime() - date1.getTime();
       let chance = 0;
       let precision = 5;
       let unit = 0;
+      const day = 1000 * 3600 * 24;
       switch (window.chanceType) {
         case "right now":
           unit = diffT / 1000;
           chance = (1 / unit) * 100;
           precision = 14;
-          break
+          break;
         case "today":
-          unit = Math.ceil(diffT / (1000 * 3600 * 24))
+          unit = Math.ceil(diffT / day);
           chance = (1 / unit) * 100;
           precision = 3;
-          break
+          break;
         case "this month":
           const month = date1.getMonth();
-          const days = month == 2 ? 28 : (!(month % 2) && month != 8 ? 30 : 31)
-          unit = Math.ceil(diffT / (1000 * 3600 * 24 * (new Date(`${month + 1}/${days}/${date1.getFullYear()}`).getTime() - date1.getTime()) / (1000 * 3600 * 24)))
+          const days = month == 2 ? 28 : !(month % 2) && month != 8 ? 30 : 31;
+          unit = Math.ceil(diffT / (new Date(`${month + 1}/${days}/${date1.getFullYear()}`).getTime() - date1.getTime()));
           chance = (1 / unit) * 100;
           precision = 2;
-          break
+          break;
         case "this year":
           const year = date1.getFullYear();
           if (year == 2022) {
-            unit = Math.ceil(diffT / (1000 * 3600 * 24 * Math.ceil((new Date("01/1/2023").getTime() - date1.getTime()) / (1000 * 3600 * 24))));
+            unit = Math.ceil(diffT / (new Date("01/1/2023").getTime() - date1.getTime()));
             chance = (1 / unit) * 100;
             precision = 2;
           } else {
-            chance = 100
+            chance = 100;
           }
-          break
+          break;
       }
       if (chance >= 100) {
         precision = 0;
-        chance = 100
+        chance = 100;
       }
       if (chance <= 0) {
         precision = 0;
-        chance = 0
+        chance = 0;
       }
       let counter = document.getElementById("counter");
-      let text = `It is ${chance.toFixed(precision)}% likely that Silksong will release `
+      let text = `It is ${chance.toFixed(precision)}% likely that Silksong will release `;
       if (window.chanceType == "")
-        text = "I'm working on how to determine the likelyness of Silksong releasing "
+        text =
+          "I'm working on how to determine the likelyness of Silksong releasing ";
       counter.innerHTML = `${text}<div onmouseover="hover()" onmouseleave="unhover()" class="dropdown">
         <button class="dropbtn" >${window.chanceType}</button>
         <div class="dropdown-content">
@@ -93,15 +96,19 @@
           <button class="dropbtn" onclick="this_year()">this year</button><br>
         </div>
       </div>.`;
-      return false
-    }
+      return false;
+    };
     refresh();
     const hover = () => {
-      document.getElementsByClassName("dropbtn").item(0).innerText = "select period"
-    }
+      document.getElementsByClassName("dropbtn").item(0).innerText =
+        "select period";
+    };
     const unhover = () => {
-      document.getElementsByClassName("dropbtn").item(0).innerText = `${window.chanceType}`
-    }
+      document
+        .getElementsByClassName("dropbtn")
+        .item(0).innerText = `${window.chanceType}`;
+    };
+
   </script>
   <footer class="foot">Made by <a href="https://twitter.com/PharloomMathGuy">@PharloomMathGuy</a> on Twitter </footer>
 </body>
