--- a/silksong.html
+++ b/silksong.html
@@ -75,7 +75,8 @@
         250
       );
       const date1 = window.date1
-      const date2 = new Date("06/12/2023");
+      // const date1 = new Date("06/12/2023");
+      const date2 = new Date("06/13/2023");
       let lastChance = 0;
       const diffT = date2.getTime() - date1.getTime();
       let chance = 0;
