Fix tomorrow statistic

--- a/silksong.html
+++ b/silksong.html
@@ -31,7 +31,7 @@
   </bold>
   <br>
   <br>
-  <button class="btn" id="refresh" onclick="refresh()">Recalculate</button>
+  <button class="btn" id="refresh" onclick="refresh(true)">Recalculate</button>
 
   <script defer src="index.js">
   </script>
