Update image set and quality

--- a/silksong.html
+++ b/silksong.html
@@ -252,8 +252,8 @@
         </button>
         </div>
       </div>.`;
-        const num = Math.floor(Math.random() * 14) + 1;
-        document.body.background = `images/${num}.jpg`;
+        const num = Math.floor(Math.random() * 15) + 1;
+        document.body.background = `images/${num}.png`;
       }
       let form = document.getElementById("dateForm");
       const handleForm = (event) => {
